--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
       <div class="card" data-id="1" data-priority="high">
         <h3>Tâche 1</h3>
         <p>Contenu de la tâche</p>
-        <button class="deleteCardBtn">Supprimer</button>
       </div>
       <div class="card" data-id="2" data-priority="low">
         <h3>Tâche 2</h3>
         <p>Autre contenu</p>
-        <button class="deleteCardBtn">Supprimer</button>
       </div>
     </div>
 
@@ -28,7 +26,6 @@
       <div class="card" data-id="3" data-priority="medium">
         <h3>Tâche 3</h3>
         <p>En cours de traitement</p>
-        <button class="deleteCardBtn">Supprimer</button>
       </div>
     </div>
 
@@ -37,11 +34,11 @@
       <div class="card" data-id="4" data-priority="high">
         <h3>Tâche 4</h3>
         <p>Terminé</p>
-        <button class="deleteCardBtn">Supprimer</button>
       </div>
     </div>
   </div>
 
+  <!-- Zone pour éventuellement des boutons, un champ de recherche, etc. -->
   <div class="toolbar">
     <button id="addCardBtn">Ajouter une carte</button>
     <input type="text" id="searchInput" placeholder="Rechercher une carte...">
