--- a/index.html
+++ b/index.html
@@ -1,50 +1,74 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Kanban Board</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Kanban Board</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Kanban Board</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Kanban Board</h1>
 
-  <div class="kanban">
-    <div class="column" data-status="todo">
-      <h2>To Do</h2>
-      <div class="card" data-id="1" data-priority="high">
-        <h3>Tâche 1</h3>
-        <p>Contenu de la tâche</p>
+    <div class="kanban">
+      <div class="column" data-status="todo">
+        <h2>To Do</h2>
+        <div class="card" data-id="1" data-priority="high">
+          <h3>Tâche 1</h3>
+          <p>Contenu de la tâche</p>
+        </div>
+        <div class="card" data-id="2" data-priority="low">
+          <h3>Tâche 2</h3>
+          <p>Autre contenu</p>
+        </div>
       </div>
-      <div class="card" data-id="2" data-priority="low">
-        <h3>Tâche 2</h3>
-        <p>Autre contenu</p>
+
+      <div class="column" data-status="doing">
+        <h2>Doing</h2>
+        <div class="card" data-id="3" data-priority="medium">
+          <h3>Tâche 3</h3>
+          <p>En cours de traitement</p>
+        </div>
+      </div>
+
+      <div class="column" data-status="done">
+        <h2>Done</h2>
+        <div class="card" data-id="4" data-priority="high">
+          <h3>Tâche 4</h3>
+          <p>Terminé</p>
+        </div>
       </div>
     </div>
 
-    <div class="column" data-status="doing">
-      <h2>Doing</h2>
-      <div class="card" data-id="3" data-priority="medium">
-        <h3>Tâche 3</h3>
-        <p>En cours de traitement</p>
-      </div>
-    </div>
+    <!-- Zone pour éventuellement des boutons, un champ de recherche, etc. -->
+   
 
-    <div class="column" data-status="done">
-      <h2>Done</h2>
-      <div class="card" data-id="4" data-priority="high">
-        <h3>Tâche 4</h3>
-        <p>Terminé</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Zone pour éventuellement des boutons, un champ de recherche, etc. -->
   <div class="toolbar">
     <button id="addCardBtn">Ajouter une carte</button>
     <input type="text" id="searchInput" placeholder="Rechercher une carte...">
     <button id="sortByPriorityBtn">Trier par priorité</button>
   </div>
 
+  <div id="addCardModal" class="modal">
+    <div class="modal-content">
+      <h2>Ajouter une nouvelle carte</h2>
+      <input type="text" id="cardTitle" placeholder="Titre de la carte">
+      <textarea id="cardContent" placeholder="Contenu de la carte"></textarea>
+      <select id="cardPriority">
+        <option value="low">Basse</option>
+        <option value="medium">Moyenne</option>
+        <option value="high">Haute</option>
+      </select>
+      <select id="cardPosition">
+        <option value="first">Au début</option> 
+        <option value="middle">Au milieu</option>
+        <option value="last">À la fin</option>
+      </select>
+      <button id="submitCard">Ajouter</button>
+      <button id="closeModal">Annuler</button>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
+    <script src="script.js"></script>
+  </body>
 </html>
