--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="favicon.png" type="image/png">
     <title>Kanban Board</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h1>Kanban Board</h1>
+    <h1>
+      <img 
+        src="favicon.png" alt="Kanban Logo" 
+      >
+      Kanban Board
+    </h1>
+
 
     <div class="kanban">
       <div class="column" data-status="todo">
